mnt/data/auth_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: appdist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: neculavalentin/auth_server:latest
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: local-storage
          mountPath: /AUTH/db
      volumes:
      - name: local-storage
        persistentVolumeClaim:
          claimName: auth-pvc
#todo node affinity, tinte, tollerations
