mnt/data/blob_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blob
  namespace: appdist 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob
  template:
    metadata:
      labels:
        app: blob
    spec:
      volumes:
      - name: nfs-volume
        persistentVolumeClaim:
          claimName: nfs-volume-claim
      containers:
      - name: blob
        image: neculavalentin/blob_server:latest
        ports:
        - containerPort: 3002
        volumeMounts:
        - name: nfs-volume
          mountPath: /nfsshare
