mnt/data/auth_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: appdist
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
