mnt/data/blob_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: blob-svc
  namespace: appdist
spec:
  type: NodePort
  selector:
    app: blob
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002 #actual port on which  application is running inside the container.
      nodePort: 30002
