mnt/data/nginx_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
  namespace: appdist
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
