mnt/data/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: appdist
  annotations:
    nginx.ingress.kubernetes.io/ingress-class: "nginx"
spec:
  rules:
    - host: prueba.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 8080
    - host: blobs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blob-svc
                port:
                  number: 80
    - host: auth.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 80
